cloudformation-webapp/Template.yaml
AWSTemplateFormatVersion: '2010-09-09'

Description: Highly Available Web Application using CloudFormation

Parameters:

  KeyName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: Select EC2 Key Pair

Resources:

# ---------------- VPC ----------------

  MyVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref MyVPC
      InternetGatewayId: !Ref InternetGateway

# ---------------- Public Subnet 1 ----------------

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      AvailabilityZone: eu-north-1a
      CidrBlock: 10.0.1.0/24
      MapPublicIpOnLaunch: true

# ---------------- Public Subnet 2 ----------------

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref MyVPC
      AvailabilityZone: eu-north-1b
      CidrBlock: 10.0.2.0/24
      MapPublicIpOnLaunch: true

# ---------------- Route Table ----------------

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref MyVPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway

  RouteAssociation1:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  RouteAssociation2:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

# ---------------- Security Group ----------------

  WebSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow HTTP and SSH
      VpcId: !Ref MyVPC

      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

# ---------------- Launch Template ----------------

  WebLaunchTemplate:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateData:

        ImageId: !Sub '{{resolve:ssm:/aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64}}'
        InstanceType: t3.micro
        KeyName: !Ref KeyName

        SecurityGroupIds:
          - !Ref WebSecurityGroup

        UserData:
          Fn::Base64: |
            #!/bin/bash
            yum update -y
            yum install -y httpd
            systemctl start httpd
            systemctl enable httpd
            echo "<h1>CloudFormation Web Server</h1>" > /var/www/html/index.html

# ---------------- Load Balancer ----------------

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Subnets:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2

      SecurityGroups:
        - !Ref WebSecurityGroup

# ---------------- Target Group ----------------

  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Port: 80
      Protocol: HTTP
      VpcId: !Ref MyVPC

# ---------------- Listener ----------------

  Listener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP

      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

# ---------------- Auto Scaling Group ----------------

  AutoScalingGroup:
    Type: AWS::AutoScaling::AutoScalingGroup

    Properties:
      VPCZoneIdentifier:
        - !Ref PublicSubnet1
        - !Ref PublicSubnet2

      MinSize: 2
      MaxSize: 4
      DesiredCapacity: 2

      TargetGroupARNs:
        - !Ref TargetGroup

      LaunchTemplate:
        LaunchTemplateId: !Ref WebLaunchTemplate
        Version: !GetAtt WebLaunchTemplate.LatestVersionNumber

Outputs:

  LoadBalancerDNS:
    Description: Website URL
    Value: !GetAtt ApplicationLoadBalancer.DNSName
